<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quoteView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/work_now_message"
        android:typeface="monospace"
        android:textColor="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <ImageView
            android:id="@+id/progressBarBG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/progress_bg_description"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_wristwatch_resized">
        </ImageView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminate="false"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/circular_progress_bar" />

    </RelativeLayout>

    <TextView
        android:id="@+id/timeView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/default_session_length"
        android:textSize="64sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textColor="@color/indigo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/buttonToggleTimer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/toggle_button_play"
            android:background="@drawable/round_button_bg"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/toggle_button_play_description" />

        <ImageButton
            android:id="@+id/buttonSkip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/icon_skip"
            android:background="@drawable/round_button_bg"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_skip_description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:adjustViewBounds="true"
            android:background="@drawable/round_button_bg"
            android:contentDescription="@string/button_settings_description"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_settings_slider" />

        <ImageButton
            android:id="@+id/buttonQuotes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/icon_burger"
            android:background="@drawable/round_button_bg"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_settings_description" />
    </LinearLayout>

</LinearLayout>