<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".editquotes.QuotesEditActivity">

    <TextView
        android:id="@+id/textQuoteListTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title_quote_list"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textColor="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quotesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_marginVertical="16dp"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@color/indigo"
        android:scrollbarSize="4dp">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_data_available"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonAddQuote"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/icon_add"
            android:background="@drawable/round_button_bg"
            android:contentDescription="@string/button_add_quote_description"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />

        <ImageButton
            android:id="@+id/buttonBackFromQuotes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/icon_left_arrow"
            android:background="@drawable/round_button_bg"
            android:contentDescription="@string/button_back_description"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />

    </LinearLayout>

</LinearLayout>