<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".settings.SettingsActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:layout_marginVertical="16dp">

        <TextView
            android:id="@+id/textWorkLengths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/text_work_length"
            android:textSize="16sp"
            android:typeface="monospace"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/spinnerWorkLengthsLayout"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:background="@drawable/spinner_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <Spinner
                android:id="@+id/spinnerWorkLengths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textBreakLengths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/text_break_length"
            android:textSize="16sp"
            android:typeface="monospace"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWorkLengths" />

        <RelativeLayout
            android:id="@+id/spinnerBreakLengthsLayout"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:background="@drawable/spinner_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerWorkLengthsLayout">

            <Spinner
                android:id="@+id/spinnerBreakLengths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textRadioOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/text_radio_option"
            android:textSize="16sp"
            android:typeface="monospace"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textBreakLengths" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRadioOption" >

            <RadioButton
                android:id="@+id/radioResume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_resume_option"
                android:typeface="monospace"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radioStartNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/radio_start_new_option"
                android:typeface="monospace"
                android:textColor="@color/black" />
        </RadioGroup>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchQuoteDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:switchPadding="8dp"
            android:checked="true"
            android:text="@string/switch_display_quotes"
            android:textSize="16sp"
            android:typeface="monospace"
            android:textColor="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/buttonBackFromSettings"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@drawable/icon_left_arrow"
        android:background="@drawable/round_button_bg"
        android:contentDescription="@string/button_back_description"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true" />

</LinearLayout>
